--- a/site/index.html
+++ b/site/index.html
@@ -6,6 +6,7 @@
   <title>Spec Driven Development — AI Native Software Engineering</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Inter:wght@400;900&display=swap" rel="stylesheet">
+  <script defer src="https://cloud.umami.is/script.js" data-website-id="b0e47a12-d133-43c3-9c25-e7a7f53c5d32"></script>
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
 
