add pdf download

--- a/site/index.html
+++ b/site/index.html
@@ -130,7 +130,7 @@
       <p class="tagline">Move beyond ad-hoc prompting to structured workflows where the spec is the source of truth and code follows.</p>
       <div class="download-buttons">
         <a href="https://sddbook.blob.core.windows.net/downloads/spec-driven-development.epub" class="download-btn">Download EPUB</a>
-        <a href="https://sddbook.blob.core.windows.net/downloads/spec-driven-development.pdf" class="download-btn secondary">Download PDF</a>
+        <a href="https://sddbook.blob.core.windows.net/downloads/spec-driven-development.pdf" target="_blank" class="download-btn secondary">Download PDF</a>
       </div>
       <p class="author">By <a href="https://kevinryan.io">Kevin Ryan</a></p>
     </div>
