Modify links to include target and rel attributes
Updated links to open in a new tab with noopener.

--- a/site/index.html
+++ b/site/index.html
@@ -551,7 +551,7 @@
       <div class="red-rule"></div>
       <h2>Install the methodology</h2>
       <p>The book teaches the methodology. The skill makes your agent follow it. Install it and your AI coding agent starts working with specifications, decision gates, and provenance — the same workflow described in every chapter.</p>
-      <p>Published on the <a href="https://tessl.io/registry/kevin-ryan-io/spec-driven-development" style="color: var(--red); text-decoration: none;">Tessl Registry</a> as a versioned, evaluated skill. One command to install. No configuration. Works with Claude Code, Cursor, Windsurf, and any MCP-compatible agent.</p>
+      <p>Published on the <a href="https://tessl.io/registry/kevin-ryan-io/spec-driven-development" target="_blank" rel="noopener" style="color: var(--red); text-decoration: none;">Tessl Registry</a> as a versioned, evaluated skill. One command to install. No configuration. Works with Claude Code, Cursor, Windsurf, and any MCP-compatible agent.</p>
 
       <div class="terminal">
         <div class="terminal-bar">
@@ -576,7 +576,7 @@
 
       <p>The skill includes the complete two-loop workflow, the step 6 decision gate, spec format requirements, the four types of context, provenance tracking, and a reference library of practitioner-discovered principles and anti-patterns. Everything in the book, distilled into structured context your agent can act on.</p>
 
-      <a href="https://tessl.io/registry/kevin-ryan-io/spec-driven-development" class="install-cta">
+      <a href="https://tessl.io/registry/kevin-ryan-io/spec-driven-development" target="_blank" rel="noopener" class="install-cta">
         <img src="tessl-logo.png" alt="Tessl">
         View on Tessl Registry
       </a>
